backend/api/config/openshift/22-api-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: api
spec:
  to:
    kind: Service
    name: api
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge

#---
#apiVersion: v1
#kind: Route
#metadata:
  #name: api
  #labels:
    #app: ui
#spec:
  #to:
    #kind: Service
    #name: api
    #weight: 100
  #port:
    #targetPort: 5000-tcp
#status: {}

#---
#apiVersion: route.openshift.io/v1
#kind: Route
#metadata:
  #labels:
    #app: ui
  #name: ui
#spec:
  #port:
    #targetPort: 5000-tcp
  #to:
    #kind: Service
    #name: ui
    #weight: 100
